[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse-data-api"
dynamic = ["version"]
description = "Python library for Nepal Stock Exchange (NEPSE) data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Rabin Katel", email = "kattelrabinraja13@gmail.com"}
]
keywords = [
    "nepse",
    "nepal",
    "stock",
    "market",
    "finance",
    "trading",
    "data",
    "api",
    "share",
    "investment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests>=2.31.0",
    "pywasm>=1.0.8",
    "aiohttp>=3.9.0",
    "websockets>=10.0"
]

[project.urls]
Homepage = "https://github.com/ra8in/nepse_data_api"
Documentation = "https://github.com/ra8in/nepse_data_api#readme"
Repository = "https://github.com/ra8in/nepse_data_api"
Issues = "https://github.com/ra8in/nepse_data_api/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0"
]

[project.scripts]
nepse = "nepse_data_api.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nepse_data_api*"]
exclude = ["tests", "examples", "docs"]

[tool.setuptools.package-data]
nepse_data_api = ["assets/*.wasm"]

[tool.setuptools.dynamic]
version = {attr = "nepse_data_api.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
